updated from container-fluid to conatiner

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -4,7 +4,7 @@
     height: 200px;
 }
 </style>
-    <div class="container-fluid mynavbar">
+    <div class="container mynavbar">
           <div id="carousel-slider" class="carousel slide" data-ride="carousel" data-interval="4000">
             <!-- Indicators -->
             <ol class="carousel-indicators">
