updated container-fluid in all files

--- a/views/contactUs/index.ejs
+++ b/views/contactUs/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="container-fluid  mynavbar">
+<div class="container  mynavbar">
     <h3>
         <% if(success && success.length >0){ %> 
             <div class="alert alert-success" role="alert">
