--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-        <div class="container-fluid mynavbar">
+        <div class="container mynavbar">
             <ul id="brandlogos">
                 <li>
                     <a href="#" class="atag" data-lid="ubr_shp_lg">
