--- a/views/aboutUs/index.ejs
+++ b/views/aboutUs/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class= "container-fluid mynavbar">
+<div class= "container mynavbar">
     <div class="row">
         <p class="lead"><h1 class="underline"><span>ABOUT US</span></h1></p>
         <div class="col-md-12">
