--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="container-fluid mynavbar">
+<div class="container mynavbar">
   <div id="carousel-slider" class="carousel slide" data-ride="carousel" data-interval="4000">
     <!-- Indicators -->
     <ol class="carousel-indicators">
