--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
     </head>
     <body>
      <header role="banner" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid"> 
+        <div class="container"> 
             <div class="navbar-header" >
                 <button type="button" class="navbar-toggle pull-left" data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".mynavbar">
                    <span class="sr-only">Toggle navigation</span> 
