updated all css

--- a/views/aboutUs/index.ejs
+++ b/views/aboutUs/index.ejs
@@ -2,40 +2,22 @@
 
 <div class= "container mynavbar">
     <div class="row">
-        <p class="lead"><h1 class="underline"><span>ABOUT US</span></h1></p>
+        <p class="lead"><h3 class="underline"><span>ABOUT US</span></h3></p>
         <div class="col-md-12">
             <blockquote>
-                 <div id="para">
-                    <p>
-                    <span id="shopname"><strong>Anil Electronics</strong></span> was founded in 1986, is now located in center of progressive and dynamic city of Warangal. 
-                    As we now march into 4th decade of our evolution, the traditional model of having consumer satisfaction and 
-                    being there to introduce them to the world of new technology has been our utmost priority. The legacy of our
-                    firms holds the mark from Radio/Television to the advance world of intelligence technology under 
-                    LCD, LED, Refrigerator, Mobiles, Laptops.
-                     </p>
-                     <p>
-                    Over the years, our firm attaches great importance to adhere product evolution and be the first to have it 
-                    introduced to our customers. The product brands which have a mark over the society are tent to be introduced 
-                    under our hoods for it to be available to the customers. A wide range of Electronics and Appliance are 
-                    displayed for customer to choose, compare and purchase the product. All the products are guided/explained by 
-                    experts to know it before its being bought.
-                     </p>
-                     <p>
-                    As we go ahead into the future, we bound ourselves to core values in achieving our vision and helping our 
-                    customer to have the best product and  good customer experience.
-                    </p>
-                    </div> 
+                <div id="para">
+                    <p><span id="shopname"><strong>Anil Electronics</strong></span> was founded in 1986, is now located in center of progressive and dynamic city of Warangal. As we now march into 4th decade of our evolution, the traditional model of having consumer satisfaction and being there to introduce them to the world of new technology has been our utmost priority. The legacy of our firms holds the mark from Radio/Television to the advance world of intelligence technology under Refrigerator, lcd, led, Mobiles, Laptops.</p><p>Over the years, our firm attaches great importance to adhere product evolution and be the first to have it introduced to our customers. The product brands which have a mark over the society are tent to be introduced under our hoods for it to be available to the customers. A wide range of Electronics and Appliance are displayed for customer to choose, compare and purchase the product. All the products are guided/explained by experts to know it before its being bought. </p><p>As we go ahead into the future, we bound ourselves to core values in achieving our vision and helping our customer to have the best product and good customer experience.</p>
+                </div> 
                </blockquote>
         </div>
     </div> 
-    
-    <h1 class="underline"><span>OUR BRANCHES</span></h1></p> 
+    <h3 class="underline"><span>OUR BRANCHES</span></h3></p> 
         <div class="row " style="display:flex; flex-wrap: wrap;">
                     <div class="col-lg-4 col-md-6 col-sm-6 address col-lg-offset-2 gauche">
                         <div class="thumbnail">
                              <img src="/images/hnkbranch.PNG"/>
                                <div class="address-details">
-                                   <p><strong><u>HANAMKONDA</u></strong></p>  
+                                  <p><strong><u>HANAMKONDA</u></strong></p>  
                                   <p>
                                     #1-8-598, NAKKALAGUTTA, HANAMKONDA<br>
                                     WARANGAL, TELANGANA - 506001<br>
@@ -53,18 +35,15 @@
                                     STATION ROAD,<br>
                                     WARANGAL, TELANGANA - 506002<br>
                                     PHONE:<a href="tel:+91 8702443344">+91 870 244 5353</a>
-                                  </p>
+                                </p>
                             </div>  
                         </div>
                     </div>
         </div>
 </div>        
- 
-     
-
 
 <style>
-h1{
+h3{
     text-align:center;
 }
 </style>
