--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -57,20 +57,21 @@
                 </li> 
             </ul>
          
-            <hr>
-            <dir class="col-md-8 col-sm-8" id="copyright">
-                <p >
-                   <h5>© ANIL ELECTRONICS 2017 |
-                   <a href="/">Home</a> |
-                   <a href="/aboutus">About us</a> |
-                   <a href="/products">Products</a> |
-                   <a href="/gallery">Events</a> |
-                   <a href="/contactus">Contact us</a></h5>
-                </p>
-            </dir>
-            <dir class="col-md-4 col-sm-4" id="websitedeveloper">
-                <p>Developed by <a href= mailto:meghana.vish@gmail.com>Meghana</a></p>  
-            </dir>        
+            <div>
+                <hr>    
+                <dir class="col-md-8 col-sm-8" id="copyright">
+                    <p>
+                       <h7>© ANIL ELECTRONICS 2017 |
+                       <a href="/aboutus">About us</a> |
+                       <a href="/products">Products</a> |
+                       <a href="/gallery">Events</a> |
+                       <a href="/contactus">Contact us</a></h7>
+                    </p>
+                </dir>
+                <dir class="col-md-4 col-sm-4" id="websitedeveloper">
+                    <p><h7>Developed by <a href= mailto:meghana.vish@gmail.com>Meghana</a></h7></p>  
+                </dir>
+            </div>
         </div>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
