--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -4,6 +4,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     /*font-family:"Helvetica";*/
     padding-top: 95px;
+    /*font-size: 1em;*/
 }
 
 /*padding after the navbar*/
@@ -14,14 +15,15 @@ body {
 }
 
 .container {
-  max-width: 1400px;
+  /*max-width: 1400px;*/
   background-color:#ffffff;
   /*padding-top:65px;*/
+  font-size: 1em;
 }
 
-    .dropdown-toggle{
+.dropdown-toggle{
      display: none;   
-    }
+}
 
 .dropdown:hover .dropdown-menu {
     display: block;
@@ -33,6 +35,7 @@ body {
   /*padding: 16px;*/
   margin-top: 30px;
   height: 1400px; 
+  font-size: 1em;
   /* Used in this example to enable scrolling */
 }
 
@@ -46,9 +49,9 @@ body {
 .navbar-default {
   background-color: #fff;
   border-color: #e7e7e7; 
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-weight:700;
-  padding:8px;
+  padding:6px;
    padding-right:5px;
 }
 .navbar-default .navbar-brand {
@@ -163,13 +166,17 @@ body {
     color: #a40000;
     background-color: #fffffa;
   }
+    .navbar-brand img{
+        width:200px;
+        /*padding-top:7px;*/
+    }  
 }
 @media (min-width: 768px) and (max-width:991px) {
      .navbar-default{
         font-size: 1.1em;
     }
     .navbar-brand img{
-        width:220px;
+        width:200px;
         padding-top:7px;
     }
     .navbar-default .navbar-nav .dropdown-menu > li{
@@ -202,16 +209,6 @@ body {
   /*margin-left: 10px;*/
 }
 /*end of navbar*/
-
-/*aboutus page address*/
-.address-details{
-         padding:10px 10px;
-         font-family: "proxima-nova","helvetica","arial","sans";
-         color: rgba(57, 50, 52, 0.86);
-         font-size:19px;
-         font-weight:600;
-}
-/*end of aboutus page address*/
 
 
 /*carousal slider css*/
@@ -276,8 +273,10 @@ body {
     margin-bottom: 30px;
     margin-top: 30px;
     box-sizing: border-box;    
+    font-size:1em;
 }
 .head{
+    /*font-size:1em;*/
     font-weight: normal;
     /*position: relative;*/
     margin: 0 15px;
@@ -297,7 +296,7 @@ body {
 /*footer*/
 #brandlogos{
 	list-style: none;
-    margin: 10px 0;
+    margin: 30px 0 20px 0;
     padding: 5px 0;
     border-top: 1px solid #dbdcdc;
     border-bottom: 1px solid #dbdcdc;
@@ -305,7 +304,7 @@ body {
     box-sizing: border-box;
     display: block;
     line-height: 2.5;
-    background-color:#ffffff;
+    background-color:#fff;
 }
 #brandlogos li{
     display: inline-block;
@@ -314,8 +313,8 @@ body {
 }
 .atag{
 	margin-left: 0;
-	width: 75px;
-    height: 65px;
+	width: 55px;
+    height: 35px;
     margin-left: 25px;
     display: inline-block;
 }
@@ -328,7 +327,6 @@ body {
   
 }
 #websitedeveloper{
-    font-size:18px;
     font-weight:bold;
     text-align:right;
 }
@@ -371,7 +369,7 @@ body {
 /*aboutUs page css*/
 .underline>span {
     font-family: "proxima-nova","helvetica","arial","sans";
-	font-size: 30px;
+	font-size: 1em;
 	font-weight: 700;
 	text-align: center;
     color: rgba(57, 50, 52, 0.86);
@@ -380,17 +378,19 @@ body {
     display: inline-block;
     border-bottom: 3px solid #231f20;
     line-height: 1em;
-    letter-spacing: .135em;
-    padding-bottom: .125em;
+    letter-spacing: .090em;
+    padding-bottom: .090em;
     text-transform: uppercase;
 }    
 #para{
-    text-indent:10%;
+    text-indent:5%;
     font-family: "proxima-nova","helvetica","arial","sans";
-    font-size: 25px;
+    font-size: 1em;
     color: rgba(57, 50, 52, 0.86);
+    /*line-height: 3em;*/
     line-height: 1.368em;
-    letter-spacing: .05em;
+    letter-spacing: .1em;
+    /*letter-spacing: .025em;*/
     /*border: 1px solid black;*/
     /*padding: 10px;*/
     width: 100%;
@@ -398,6 +398,13 @@ body {
     text-align: justify;
     text-justify: distribute;
     word-spacing:-2px;
+}
+.address-details{
+         padding: 10px 10px;
+         font-family: "proxima-nova","helvetica","arial","sans";
+         color: rgba(57, 50, 52, 0.86);
+         font-size: 1em;
+         font-weight: 600;
 }
 blockquote{
         padding: 0px 0px;
