--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -60,6 +60,9 @@
 </div> <!--container -->
 <!--script in footer-->
 <style>
+.carousel-slider{
+  padding-bottom: 10px;
+}
 /* tablets */
 @media (max-width: 991px) and (min-width: 400px) {
     .slider-size {
