--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -110,13 +110,13 @@ body {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #a40000;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   color: #a40000;
-  background-color: #f333;
+  background-color: #ffffff;
 }
 .navbar-default .navbar-toggle {
   border:none;
@@ -126,10 +126,10 @@ body {
 /*  background-color: grey;*/
 /*}*/
 .navbar-default .navbar-toggle .icon-bar {
-  background-color:#f333 ;
+  background-color: grey;
 }
 .icon-bar {
-  background-color:#333 ;
+  background-color:#grey ;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
@@ -325,6 +325,9 @@ body {
     /*height: auto;*/
     opacity: 1;
   
+}
+#copyright{
+    font-size:0.5em;
 }
 #websitedeveloper{
     font-weight:bold;
