updated api key

--- a/views/contactUs/index.ejs
+++ b/views/contactUs/index.ejs
@@ -138,6 +138,6 @@
     });
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?AIzaSyDIJFUV9WRplqXK09C11NDQSXxWXOHimQk&callback=initMap"></script>
-
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBumqQuuhEJxOuZfnrsZQVQS-7JjKQPaBA&callback=initMap" type="text/javascript">
+</script>
 <% include ../partials/footer %>
