edited http to httpsnetdxn

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -86,7 +86,7 @@
         
         <script>
             $('.carousel').carousel({
-        		interval: 3000;
+        		interval: 3000
         	});
         	
             $(document).ready(function() {   
