edited css, of landng

--- a/views/contactUs/index.ejs
+++ b/views/contactUs/index.ejs
@@ -17,7 +17,7 @@
    <div class="thumbnail">
     <div class="img-responsive" id="map"></div>
       <div class="caption-full">
-          <p class="lead"><h4 class="underline"><span>Anil Electronics</span></h4></p>
+          <p class="lead"><h4 class="contactusunderline"><span>Anil Electronics</span></h4></p>
           <div class="address-details">
              <p id="contactAddress">#1-8-598, Balasamudram, Nakkalagutta<br>
                 Hanamkonda, Warangal<br>
