--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,8 +9,8 @@
     <body>
     
     <div id="landing-header">
- 		<h1>Welcome to Anil Electronics!</h1>
-		<a href="/aboutus" class="btn btn-lg btn-primary">ABOUT US</a>
+ 		<h2>Welcome to Anil Electronics!</h2>
+		<a href="/aboutus" class="btn btn-md btn-info">ABOUT US</a>
     </div>
     
     <ul class="slideshow">
