--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
      <header role="banner" class="navbar navbar-default navbar-fixed-top">
         <div class="container"> 
             <div class="navbar-header" >
-                <button type="button" class="navbar-toggle pull-left" data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".mynavbar">
+                <button type="button" class="navbar-toggle pull-right" data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".mynavbar">
                    <span class="sr-only">Toggle navigation</span> 
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
