going back to 3 pm code

--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -21,9 +21,9 @@ body {
   font-size: 1em;
 }
 
-.dropdown-toggle{
-     display: none;   
-}
+/*.dropdown-toggle{*/
+/*     display: none;   */
+/*}*/
 
 .dropdown:hover .dropdown-menu {
     display: block;
@@ -129,14 +129,13 @@ body {
   background-color: grey;
 }
 .icon-bar {
-  background-color: grey ;
+  background-color:grey ;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
   border: none!important;             /*edited*/
 }
 
-/* mobile mode - side collapse css*/
 @media (max-width: 767px) {
     .side-collapse{
      background:#fffffa; 
@@ -172,10 +171,6 @@ body {
         /*padding-top:7px;*/
     }  
 }
-/* end of mobile mode - side collapse css*/
-
-
-/*tablet mode- reducing brand logo size */
 @media (min-width: 768px) and (max-width:991px) {
      .navbar-default{
         font-size: 1.1em;
@@ -188,9 +183,7 @@ body {
         font-size: 1.1em;
     }
 }
-/*end of tablet mode- reducing brand logo size */
 
-/* dropdown hover enable disabled css*/
 @media (max-width: 768px) {
    .dropdown-menu {
         display: none !important;
@@ -210,12 +203,11 @@ body {
     
   }
 }
-/* end of dropdown hover enable disabled css*/
 
-/*.navbar-toggle.navbar-left {*/
-/*  float: left;*/
+.navbar-toggle.navbar-left {
+  float: left;
   /*margin-left: 10px;*/
-/*}*/
+}
 /*end of navbar*/
 
 
@@ -273,7 +265,7 @@ body {
 /*end-thumbail*/
 
 
-/*css for products shows.ejs */
+
 .heading{
     background: rgba(186, 189, 139, 0.2);
     color: #49494a;
@@ -292,150 +284,13 @@ body {
     padding: 20px 0 20px 0;
     border-bottom: 0;
 }
-/*end of css for products shows.ejs */
 
 
-
-/* slide - navbar */
-        pre {
-            tab-size: 8;
-        }
-        
-        @media screen and (max-width: 768px) {
-            .mynavbar{
-                width:100%;
-                position:relative;
-                left:0;
-                transition:left .4s;
-            }
-            .mynavbar.out{
-                left:200px;
-            }
-            .side-collapse {
-                top:68px;
-                bottom:0;
-                left:0;
-                width:300px;
-                position:fixed;
-                overflow:hidden;
-                transition:width .4s;
-            }
-            .side-collapse.in {
-                width:0;
-                background-color:#fff;
-            }
-        }
-/* Ends - slide - navbar */
-
-
-
-
-/*aboutUs page css*/
-.underline>span {
-    font-family: "proxima-nova","helvetica","arial","sans";
-	font-size: 1em;
-	font-weight: 700;
-	text-align: center;
-    color: rgba(57, 50, 52, 0.86);
-    margin: 40px 0;
-    margin-bottom: .75em;
-    display: inline-block;
-    border-bottom: 3px solid rgba(57, 50, 52, 0.86);
-    line-height: 1em;
-    letter-spacing: .090em;
-    padding-bottom: .090em;
-    text-transform: uppercase;
-}    
-#para{
-    text-indent:5%;
-    font-family: "proxima-nova","helvetica","arial","sans";
-    font-size: 1em;
-    color: rgba(57, 50, 52, 0.86);
-    /*line-height: 3em;*/
-    line-height: 1.368em;
-    letter-spacing: .1em;
-    /*letter-spacing: .025em;*/
-    /*border: 1px solid black;*/
-    /*padding: 10px;*/
-    width: 100%;
-    height: 100%;
-    text-align: justify;
-    text-justify: distribute;
-    word-spacing:-2px;
-}
-.address-details{
-         padding: 10px 10px;
-         font-family: "proxima-nova","helvetica","arial","sans";
-         color: rgba(57, 50, 52, 0.86);
-         font-size: 1em;
-         font-weight: 600;
-}
-blockquote{
-        padding: 0px 0px;
-        border-style:none;
-}
-#shopname{
-         font-size:1.25em;
-       
-}
-/*end of aboutUs page css*/
-
-
-/*css for contatcus page*/
-.contactusunderline>span {
-    font-family: "proxima-nova","helvetica","arial","sans";
-	font-size: 1em;
-	font-weight: 700;
-    color: rgba(57, 50, 52, 0.86);
-    /*margin-bottom: .75em;*/
-    display: inline-block;
-    border-bottom: 3px solid  rgba(57, 50, 52, 0.86);
-    line-height: 1em;
-    letter-spacing: .090em;
-    padding-bottom: .090em;
-    text-transform: uppercase;
-}
 /* Google Maps */
 #map {
     height: 400px;
     width: 100%;
 }
-.contactForm{
-    padding-top: 10px;
-    padding-left: 10px;
-    max-width: 100%;
-    margin-bottom: 15px;
-}
-.form-control{
-/*    display:inline;*/
-    line-height:1.5em;
-    padding-left: 10px;
-    padding: 26px 16px 6px 16px;
-    height: auto;
-    margin-bottom: 15px;
-        
-}
-.form-control{
-    font-size:1em;
-    padding: 14px;
-    height: auto;
-    outline: none;
-    box-shadow: inset 1px 2px 0 rgba(0, 0, 0, 0.06);
-    border: 1px solid #D9D9D9;
-}
-.row {
-    margin-right: -15px;
-    margin-left: -15px;
-}
-#formButton{
-    padding:10px 35px;
-    font-size:1em;
-}
-#contactAddress{
-    font-size:1em;
-}
-/*end of - css for contatcus page*/
-
 
 
 /*footer*/
@@ -474,14 +329,92 @@ blockquote{
 #copyright{
     font-size:0.5em;
 }
-@media (min-width:992px) {
-    #copyright{
-        font-size:0.7em;
-    }
-}    
 #websitedeveloper{
     font-weight:bold;
     text-align:right;
 }
 
 /*ends - footer */
+
+
+/* slide - navbar */
+        pre {
+            tab-size: 8;
+        }
+        
+        @media screen and (max-width: 768px) {
+            .mynavbar{
+                width:100%;
+                position:relative;
+                left:0;
+                transition:left .4s;
+            }
+            .mynavbar.out{
+                left:200px;
+            }
+            .side-collapse {
+                top:68px;
+                bottom:0;
+                left:0;
+                width:300px;
+                position:fixed;
+                overflow:hidden;
+                transition:width .4s;
+            }
+            .side-collapse.in {
+                width:0;
+                background-color:#fff;
+            }
+        }
+/* Ends - slide - navbar */
+
+
+/*aboutUs page css*/
+.underline>span {
+    font-family: "proxima-nova","helvetica","arial","sans";
+	font-size: 1em;
+	font-weight: 700;
+	text-align: center;
+    color: rgba(57, 50, 52, 0.86);
+    margin: 40px 0;
+    margin-bottom: .75em;
+    display: inline-block;
+    border-bottom: 3px solid #231f20;
+    line-height: 1em;
+    letter-spacing: .090em;
+    padding-bottom: .090em;
+    text-transform: uppercase;
+}    
+#para{
+    text-indent:5%;
+    font-family: "proxima-nova","helvetica","arial","sans";
+    font-size: 1em;
+    color: rgba(57, 50, 52, 0.86);
+    /*line-height: 3em;*/
+    line-height: 1.368em;
+    letter-spacing: .1em;
+    /*letter-spacing: .025em;*/
+    /*border: 1px solid black;*/
+    /*padding: 10px;*/
+    width: 100%;
+    height: 100%;
+    text-align: justify;
+    text-justify: distribute;
+    word-spacing:-2px;
+}
+.address-details{
+         padding: 10px 10px;
+         font-family: "proxima-nova","helvetica","arial","sans";
+         color: rgba(57, 50, 52, 0.86);
+         font-size: 1em;
+         font-weight: 600;
+}
+blockquote{
+        padding: 0px 0px;
+        border-style:none;
+}
+#shopname{
+         font-size:1.25em;
+       
+}
+/*end of aboutUs page css*/
