--- a/public/stylesheet/landing.css
+++ b/public/stylesheet/landing.css
@@ -1,7 +1,7 @@
 body {
   background-color: #000;
 }
-/*position the welcome text and view all campgrounds buton*/
+/*position the welcome text and view all products button*/
 #landing-header {
   font-family: "proxima-nova","helvetica","arial","sans";
 	font-size: 30px;
