edited footer links

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -60,10 +60,7 @@
             <div id="copyright">
                 <hr>    
                 <dir class="col-md-8 col-sm-8">
-                    <p>© ANIL ELECTRONICS 2017 |
-                       <a href="/aboutus">About us</a> |
-                       <a href="/products">Products</a> |
-                       <a href="/gallery">Events</a> |
+                    <p>© ANIL ELECTRONICS 2017 |<a href="/aboutus"> About us | </a>
                        <a href="/contactus">Contact us</a>
                     </p>
                 </dir>
