update googlemap api

--- a/views/contactUs/index.ejs
+++ b/views/contactUs/index.ejs
@@ -86,6 +86,6 @@
         $("#map").css("height", $(window).height());
  });
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBumqQuuhEJxOuZfnrsZQVQS-7JjKQPaBA&callback=initMap" type="text/javascript">
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=googleapi&callback=initMap" type="text/javascript">
 </script>
 <% include ../partials/footer %>
